Consolidated down to one play using variables and the package module

--- a/install_apache.yml
+++ b/install_apache.yml
@@ -4,38 +4,14 @@
   become: true
   tasks:
  
-  - name: update repository index
-    apt:
+  - name: Install apache package & add php support.
+    package:
+      name:
+        - "{{ apache }}"
+        - "{{ php }}"
+
+      state: latest
       update_cache: yes
-    when: ansible_distribution == "Ubuntu"
 
-  - name: Install apache2 package
-    apt:
-      name: apache2
-      state: latest
-    when: ansible_distribution == "Ubuntu"
 
-  - name: add php support for apache
-    apt: 
-      name: libapache2-mod-php
-      state: latest
-    when: ansible_distribution == "Ubuntu"
-
-# - Same above playbook, but for CentOS distros. 
-  - name: update repository index
-    dnf:
-      update_cache: yes
-    when: ansible_distribution == "CentOS"
-
-  - name: Install apache2 package
-    dnf:
-      name: httpd
-      state: latest
-    when: ansible_distribution == "CentOS"
-
-  - name: add php support for apache
-    dnf:
-      name: php
-      state: latest
-    when: ansible_distribution == "CentOS"
 
