--- a/install_apache.yml
+++ b/install_apache.yml
@@ -1,17 +1,23 @@
----
-
-- hosts: all
-  become: true
-  tasks:
+ ---
  
-  - name: Install apache package & add php support.
-    package:
-      name:
-        - "{{ apache }}"
-        - "{{ php }}"
-
-      state: latest
-      update_cache: yes
-
-
-
+ - hosts: all
+   become: true
+   tasks:
+ 
+   - name: install apache and php for Ubuntu servers
+     apt:
+       name:
+         - apache2
+         - libapache2-mod-php
+       state: latest
+       update_cache: yes
+     when: ansible_distribution == "Ubuntu"
+ 
+   - name: install apache and php for CentOS servers
+     dnf:
+       name:
+         - httpd
+         - php
+       state: latest
+       update_cache: yes
+     when: ansible_distribution == "CentOS"
